# jellyfin-manage-bot

./: .gitignore  LICENSE  meson.build
libs/dpp/: LICENSE
src/: main.cpp
